--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "fs": "^0.0.1-security",
     "mongodb": "^3.3.2",
     "nightmare": "^3.0.2",
-    "puppeteer": "^1.11.0",
+    "puppeteer": "1.11.0",
     "puppeteer-extra": "^2.1.3",
     "puppeteer-extra-plugin-anonymize-ua": "^2.1.4",
     "puppeteer-extra-plugin-recaptcha": "^3.0.4",
