--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.1",
   "description": "",
   "main": "app.js",
-  "scripts": {
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/leogiouldasis/real-estate-crawler.git"
@@ -21,6 +20,7 @@
     "cheerio": "^1.0.0-rc.3",
     "dotenv": "^8.1.0",
     "fs": "^0.0.1-security",
+    "moment": "^2.24.0",
     "mongodb": "^3.3.2",
     "nightmare": "^3.0.2",
     "puppeteer": "1.11.0",
